public/assets/styles.css
/* ... */
.label-white {
    color: #fff;
    margin-bottom: 2px;
    font-size: 16px;
    line-height: 24px;
}

.label-gray {
    color: #a8a8a8;
    font-size: 14px;
    line-height: 22px;
}

.niv-data {
    align-items: center;
    display: flex;
}

.niv-image {
    width: 48px;
    height: 48px;
    border: 1px solid #353535;
    border-radius: 100px;
    margin-right: 12px;
}

.main {
    width: 100%;
    height: 100%;
    background-image:
        linear-gradient(rgba(28, 28, 28, 0.64), rgba(28, 28, 28, 0.64)),
        url("./grid-top-right.svg"),
        linear-gradient(rgba(28, 28, 28, 0.24), rgba(28, 28, 28, 0.24));
    background-position:
        0 0,
        0 0,
        0 0;
    background-size:
        auto,
        auto 1130px,
        auto;
    flex-direction: column;
    align-items: center;
    padding: 46px 48px 82px;
    display: flex;
    overflow: auto;
}

.container {
    width: 100%;
    max-width: 680px;
    grid-column-gap: 68px;
    grid-row-gap: 68px;
    flex-direction: column;
    display: flex;
}

.lead {
    max-width: 580px;
    color: #fff;
    margin-bottom: 0;
    line-height: 26px;
}

.button {
    color: #fff;
    background-color: #1c1c1c;
    border: 1px solid #363636;
    border-right-color: #353535;
    border-radius: 8px;
    padding: 12px 20px;
    font-size: 14px;
    font-weight: 500;
    line-height: 26px;
    transition: all 40ms;
}

.button:hover {
    background-color: #202020;
    box-shadow: 0 2px 4px rgba(8, 8, 8, 0.82);
}

.fold-content {
    margin-bottom: 48px;
}

.mini-label-white {
    color: #fff;
    letter-spacing: 0.75px;
    text-transform: uppercase;
    margin-top: 24px;
    font-family:
        IBM Plex Mono,
        sans-serif;
    font-size: 10px;
    font-weight: 400;
    line-height: 24px;
}

.mini-label-white.gray-color {
    color: #a8a8a8;
}

.chips-container {
    grid-column-gap: 12px;
    grid-row-gap: 12px;
    flex-wrap: wrap;
    align-items: flex-start;
    margin-top: 8px;
    display: flex;
}

.chips-container.chips-container-small-width {
    max-width: 380px;
}

.single-chip {
    color: #fff;
    background-color: #353535;
    border-radius: 8px;
    padding: 8px 12px;
    font-family:
        IBM Plex Mono,
        sans-serif;
}

.single-chip.small-chip {
    padding: 4px 8px;
    font-size: 12px;
}

.single-item {
    font-size: 16px;
}

.resouce-items {
    grid-column-gap: 64px;
    /*grid-row-gap: 64px;*/
    flex-direction: column;
    display: flex;
}

.items-container {
    flex-direction: column;
}

.nav-link-image {
    width: 24px;
    opacity: 0.48;
}

.nav-link-container {
    grid-column-gap: 12px;
    grid-row-gap: 12px;
    color: #a8a8a8;
    text-transform: capitalize;
    border: 1px solid rgba(0, 0, 0, 0);
    border-radius: 8px;
    justify-content: flex-start;
    align-items: center;
    padding: 12px;
    text-decoration: none;
    display: flex;
}

.nav-link-container.w--current {
    color: #fff;
    background-color: #2b2b2b;
    border-color: #353535;
}

.projects-container {
    grid-column-gap: 24px;
    grid-row-gap: 24px;
    align-items: stretch;
    text-decoration: none;
    display: flex;
}

.single-projects-category {
    display: flex;
}

.projects-category-image-container {
    min-height: 180px;
    min-width: 180px;
    -webkit-backdrop-filter: blur(4px);
    backdrop-filter: blur(4px);
    background-color: rgba(53, 53, 53, 0.12);
    border: 1px #000;
    border-radius: 12px;
    justify-content: center;
    align-items: center;
    display: flex;
    box-shadow:
        0 1px 1px rgba(255, 255, 255, 0.24),
        0 -1px 1px rgba(255, 255, 255, 0.24);
}

.projects-category-image-container.devops-img {
    background-image: none;
    background-position: 0 0;
}

.single-projects-content {
    flex-direction: column;
    justify-content: center;
    display: flex;
}

.projects-section {
    grid-column-gap: 32px;
    grid-row-gap: 32px;
    flex-direction: column;
    display: flex;
}

.tech-tools-container {
    flex-direction: column;
    justify-content: flex-end;
    display: flex;
}

.back-nav-container {
    color: #fff;
    letter-spacing: 2px;
    text-transform: uppercase;
    align-items: center;
    padding-bottom: 0;
    font-weight: 500;
    display: flex;
}

.back-nav-img {
    width: 18px;
}

.back-nav-button {
    color: #fff;
    background-color: rgba(0, 0, 0, 0);
    border-radius: 8px;
    margin-top: -12px;
    padding: 12px 16px;
    text-decoration: none;
    transition: all 0.12s;
    display: flex;
}

.back-nav-button:hover {
    -webkit-backdrop-filter: blur(4px);
    backdrop-filter: blur(4px);
    background-color: rgba(8, 8, 8, 0.24);
}

.project-desc {
    color: #a8a8a8;
    line-height: 24px;
}

.project-desc.project-desc-list {
    margin-left: -24px;
}

.content-container {
    grid-column-gap: 32px;
    grid-row-gap: 32px;
    flex-direction: column;
    display: flex;
}

.projects-category-image {
    width: 82px;
    height: 82px;
}

@media screen and (max-width: 991px) {
    .content {
        flex-direction: column;
    }

    .sidebar {
        height: auto;
        max-width: 100%;
        padding-top: 18px;
        padding-bottom: 18px;
        padding-right: 28px;
    }

    .nav-content {
        height: auto;
        grid-column-gap: 0px;
        grid-row-gap: 0px;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
    }

    .fold-content {
        margin-bottom: 32px;
    }

    .nav-link-container {
        background-color: #1c1c1c;
        border-radius: 0;
        padding: 18px 28px 18px 32px;
    }

    .nav-link-container:active {
        color: #fff;
        background-color: #2b2b2b;
    }

    .navbar-icon {
        width: 32px;
        height: 32px;
        color: #fff;
        font-size: 32px;
    }

    .navbar-icon-button {
        padding: 12px;
        transition: all 0.24s;
    }
}
/* ... */

